<resources>
    <string name="app_name">Simulando Chamada</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="titulo">Simulado Chamada</string>
    <string name="senha">Senha</string>
    <string name="confirmarsenha">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="apagar">X</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn">*</string>
    <string name="btnn">#</string>
    <string name="btn_ligar">Ligar</string>
    <string name="display">83 986531618</string>
</resources>
