<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tecinfo.simulandochamada.Main3Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="328dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnasteristico"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/btnvelha"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/btnn" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_apagar"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/apagar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/btn_ligar"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/btn_ligar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />
</android.support.constraint.ConstraintLayout>
